--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,6 +40,10 @@ button {
   color: #fff;
   border-color: #000;
   font-weight: bold; }
+  button.button-inline {
+    height: auto;
+    min-width: auto;
+    margin-left: 10px; }
 
 button:hover {
   cursor: pointer;
