--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,9 @@
   .blog-item span {
     display: block;
     padding: 5px 0; }
+    .blog-item span .current-likes {
+      display: inline-block;
+      padding: 0; }
 
 .bold {
   font-weight: bold; }
