--- a/src/styles/blogs.css
+++ b/src/styles/blogs.css
@@ -8,6 +8,6 @@
   .blog-item span {
     display: block;
     padding: 5px 0; }
-    .blog-item span .current-likes {
+    .blog-item span .likes-count {
       display: inline-block;
       padding: 0; }
