--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@
   .blog-item span {
     display: block;
     padding: 5px 0; }
-    .blog-item span .current-likes {
+    .blog-item span .likes-count {
       display: inline-block;
       padding: 0; }
 
