--- a/src/styles/scss/blogs.scss
+++ b/src/styles/scss/blogs.scss
@@ -9,7 +9,7 @@
     span {
         display: block;
         padding: 5px 0;
-        .current-likes {
+        .likes-count {
             display: inline-block;
             padding: 0;
         }
